Fix overflow on myHunts active-index

--- a/frontend/src/stylesheets/components/hunt/_create_form.scss
+++ b/frontend/src/stylesheets/components/hunt/_create_form.scss
@@ -241,7 +241,7 @@
   top: 5%;
   left: 9.8%;
   z-index: 10;
-  transform: rotate(25deg);
+  transform: rotate(18deg);
   font-size: 40px;
   font-weight: bold;
   letter-spacing: .1em;
