--- a/frontend/src/stylesheets/components/hunt/_hunt_collection_item.scss
+++ b/frontend/src/stylesheets/components/hunt/_hunt_collection_item.scss
@@ -1,7 +1,6 @@
 .mini-cards {
   height: 100px;
   width: 120px;
-  // background-color: $red;
 }
 
 .mini-card {
@@ -10,14 +9,14 @@
   width: 100px;
   height: 100px;
   border-radius: 13px;
+  border: 2px solid white;
 }
 
 .mini-one {
   position: absolute;
   background-color: rgba(70, 70, 70, 0.253);
-  // right: -2px;
   opacity: .5;
-  z-index: 1;
+  // z-index: 1;
   transform: rotate(24deg);
 }
 
@@ -25,7 +24,7 @@
   position: absolute;
   background-color: rgba(70, 67, 67, 0.404);
   opacity: 1;
-  z-index: 2;
+  // z-index: 2;
   transform: rotate(10deg);
   display: flex;
   align-items: center;
@@ -40,6 +39,6 @@
   position: absolute;
   background-color: rgba(104, 101, 101, 0.438);
   opacity: 2;
-  z-index: 3;
+  // z-index: 3;
   transform: rotate(-2deg)
 }
